welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:22: error: Unmatched closing brace '}' ignored here
	}
        ^DwarfCode:23: error: eof expected but '}' found.
}
^